--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
+        <!--<p>{{ site.description | escape }}</p>-->
         Base for Webware, A-term 2017 offering @WPI.
         Problems with this webpage? 
         <a id="file-bug-anchor" href="#">file a bug</a>, or 
