--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,11 @@ layout: default
   <script src="/js/common.js"></script>
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+    {% if page.title == 'home' %}
+      <h1 class="post-title"></h1>
+    {% else %}
+      <h1 class="post-title">{{ page.title | escape }}</h1>
+    {% endif %}
   </header>
 
   <div class="post-content">
