--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,7 @@ layout: default
   <script src="/js/moment.js"></script>
   <script src="/js/common.js"></script>
 
+  <link href="https://fonts.googleapis.com/css?family=Changa" rel="stylesheet">
   <header class="post-header">
     {% if page.title == 'home' %}
       <h1 class="post-title"></h1>
